# bible-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
scripts/: download_bible_ptbr.py
skills/generate-kg/: SKILL.md  themes_seed.json
src/: config.py
src/bible_copilot/: agent_definition.py  file_index.py  graph.py  prompts.py  state.py  tools.py  verse_extractor.py
src/kg/: context.py  tools.py
src/kg/data/: bible_index.json  bible_index_graph.html
src/middleware/: __init__.py  message_history.py  save_response.py  structured_output.py
src/utils/: logger.py  observability.py  pricing.py  supabase_client.py  usage.py
