[project]
name = "bible-copilot"
version = "0.1.0"
description = "Assistente bíblico multiagentes em português do Brasil"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.0",
    "langchain>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "requests>=2.32.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "grand-cypher>=1.0.1",
]
